feat: add new classes and interfaces for versioning, logging, and event handling; update build configurations